changed typo in Garcia-Retamero and Galesic (2010) title to reflect corrected version: https://pubmed.ncbi.nlm.nih.gov/20116159/

--- a/axis-extension.bib
+++ b/axis-extension.bib
@@ -240,7 +240,7 @@
 }
 
 @article{garcia-retamero_who_2010,
-	title = {Who proficts from visual aids: {Overcoming} challenges in people's understanding of risks},
+	title = {Who profits from visual aids: {Overcoming} challenges in people's understanding of risks},
 	volume = {70},
 	issn = {02779536},
 	shorttitle = {Who proficts from visual aids},
