--- a/text_body/axis-extension.bib
+++ b/text_body/axis-extension.bib
@@ -240,7 +240,7 @@
 }
 
 @article{garcia-retamero_who_2010,
-	title = {Who proficts from visual aids: {Overcoming} challenges in people's understanding of risks},
+	title = {Who profits from visual aids: {Overcoming} challenges in people's understanding of risks},
 	volume = {70},
 	issn = {02779536},
 	shorttitle = {Who proficts from visual aids},
